# cpp-practice

./: .gitignore
STL/: main.cpp
STL.xcodeproj/: project.pbxproj
STL.xcodeproj/xcuserdata/ajay.xcuserdatad/xcschemes/: xcschememanagement.plist
STL_practice/generic_algo/: find_if.cpp  main.cpp
STL_practice/string/: operations.cpp  trimSpaces.cpp
bonn_modern_cpp/homework_1/task_2/: .README.md.swp  build.sh
bonn_modern_cpp/project1/: CMakeLists.txt  main.cpp  tools.cpp  tools.h
generic_algo/: generate.cpp
google_c++/: CMakeLists.txt  random.cpp
kilo_editor/: Makefile  kilo.c
string/: access.cpp  capacity.cpp  initialise.cpp  operations.cpp  rParse.cpp  sieve.cpp
